# AIlways

./: .gitignore  README.md
backend/: .dockerignore  .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
backend/app/: __init__.py  __main__.py
backend/app/api/: app.py  extensions.py  lifespan.py
backend/app/api/routers/: root.py
backend/app/api/routers/auth/: auth.py
backend/app/api/routers/documents/: documents.py  schemas.py
backend/app/api/routers/query/: query.py  schemas.py
backend/app/api/routers/transcription/: pipeline.py  schemas.py  sessions.py  transcription.py
backend/app/api/routers/vault/: schemas.py  vault.py
backend/app/core/: config.py  logger.py  utils.py
backend/app/core/auth/: deps.py  security.py
backend/app/core/claims/: __init__.py  base.py  detector.py  exceptions.py  verifier.py
backend/app/core/copilot/: __init__.py  agent.py  base.py  classification.py  extraction.py  filters.py  prompts.py  tools.py  verification.py
backend/app/core/kafka/: consumer.py  dlq.py  producer.py  topics.py
backend/app/core/rag/: __init__.py  exceptions.py  ingest.py  metadata.py
backend/app/core/rag/chunking/: __init__.py  base.py  header_builder.py  hierarchical.py  recursive.py  table_chunker.py  text_splitter.py
backend/app/core/rag/embedding/: __init__.py  base.py  batch.py  openai.py
backend/app/core/rag/generation/: __init__.py  base.py  openai.py
backend/app/core/rag/parsing/: __init__.py  base.py  ir.py  pdf.py  pdf_parser.py  registry.py  text.py  txt_parser.py
backend/app/core/rag/query/: __init__.py  pipeline.py  query_classifier.py  query_decomposer.py  query_expander.py  query_rewriter.py  rewriter.py  schemas.py
backend/app/core/rag/reasoning/: crag.py  prompts.py  schemas.py
backend/app/core/rag/retrieval/: __init__.py  (+13 more)
backend/app/core/storage/: base.py  local.py
backend/app/core/tools/: redis.py
backend/app/core/transcription/: __init__.py  base.py  buffer.py  deepgram.py  exceptions.py  persistence.py
backend/app/db/: __init__.py
backend/app/db/db/: init_db.sql
backend/app/db/migrations/: env.py
backend/app/db/models/: __init__.py  audit_log.py  chunk.py  document.py  feedback.py  transcription_claim.py  transcription_segment.py  transcription_session.py  user.py  utils.py  vault.py
backend/app/workers/: audit_worker.py  base.py  deletion_worker.py  ingestion_worker.py  runner.py
backend/scripts/: streamlit_app.py
backend/tests/: conftest.py
backend/tests/auth/: conftest.py  test_login.py  test_logout.py  test_me.py  test_register.py
backend/tests/unit/: test_password_hashing.py
(+75 files in other folders)
