[project]
name = "AIlways"
version = "0.1.0"
description = "Meeting Truth & Context Copilot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.129.0",
    "uvicorn==0.41.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.0",
    "email-validator==2.3.0",
    "sqlmodel==0.0.34",
    "sqlalchemy==2.0.46",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "redis==7.2.0",
    "tenacity==9.1.4",
    "pwdlib[argon2]==0.3.0",
    "pyrate-limiter==4.0.2",
    "fastapi-limiter==0.2.0",
    "greenlet==3.3.1",
    "unstructured==0.20.8",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "httpx==0.28.1",
    "fakeredis==2.34.0",
    "aiosqlite==0.22.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:Setting per-request cookies:DeprecationWarning",
    "ignore:Call to '__init__' function with deprecated usage:DeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "httpx==0.28.1",
    "fakeredis==2.34.0",
    "aiosqlite==0.22.1",
]
